LPD-91289 Apply review feedback to the service and filter
Preserves the RFC 9728 query component in the well-known URI, requires bearer_methods_supported, validates the resource URL with URI, rejects cross-company reads in the remote service, normalizes the trailing slash, and uses ArrayUtil.isNotEmpty and JSONUtil.toStringArray over hand-written equivalents.